# hanzi_chaizi

./: .gitignore  .gitmodules  MANIFEST.in  README.md  develop.md  example_code.py  makefile  non_decomposable.txt  prase.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
dev_scripts/: prase.py
example_code/: example_code.py
hanzi_chaizi/: __init__.py  hanzi_chaizi.py
hanzi_chaizi/data/: data.pkl
hanzi_chaizi/hanzi_chaizi/data/: data.pkl
raw_data/: README.md  parse.py
tests/: test_hanzi_chaizi.py
